# voting-system-v-1

./: Cargo.toml
interactor/: Cargo.toml  state.toml
interactor/src/: interact.rs  interactor_main.rs  proxy.rs
interactor/tests/: interact_cs_tests.rs  interact_tests.rs
meta/: Cargo.toml
meta/src/: main.rs
output/: voting-system-v-1.abi.json  voting-system-v-1.imports.json  voting-system-v-1.mxsc.json  voting-system-v-1.wasm
scenarios/: voting_system_v_1.scen.json
src/: storage.rs  voting_system_v_1.rs
tests/: voting_system_v_1_scenario_go_test.rs  voting_system_v_1_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
