[package]
name = "voting-system-v-1"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/voting_system_v_1.rs"

[dependencies.multiversx-sc]
version = "0.55.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.55.0"

[dependencies]
fhe = "0.1.0-beta.8"
fhe-traits = "0.1.0-beta.8"
fhe-util = "0.1.0-beta.8"

[workspace]
members = [
    ".",
    "meta",
    "interactor",
]
